--- a/app/.htaccess
+++ b/app/.htaccess
@@ -7,3 +7,5 @@ RewriteCond %{REQUEST_FILENAME} !-d
 
 
 RewriteRule ^([a-z0-9-]+)(/?)([0-9]*)$ index.php?p=$1&id=$3 [NC,L]
+
+RewriteRule api-^([a-z0-9-]+)(/?)([0-9]*)$ index.php?p=$1&id=$3 [QSA,NC,L]
