--- a/app/.htaccess
+++ b/app/.htaccess
@@ -6,4 +6,7 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
 
+RewriteRule ^api/([a-z0-9-]+)(/?)([0-9]*)(/?)$ index.php?p=$1&id=$3 [QSA,NC,L]
+
+
 RewriteRule ^([a-z0-9-]+)(/?)([0-9]*)$ index.php?p=$1&id=$3 [NC,L]
